# libcyusbserial

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README-Linux.txt  README-Mac.txt  README.md  appveyor.yml
cmake/modules/: FindLibPThreadsWin32.cmake  FindLibUSB.cmake  FindPthreadsW32.cmake
include/: CMakeLists.txt  CyUSBSerial.h
lib/: 90-cyusb.rules  CMakeLists.txt  CyUSBCommon.h  Makefile  Makefile-Linux  Makefile-Mac  cyi2c.c  cyjtag.c  cymisc.c  cyphdc.c  cyspi.c  cyuart.c  cyusb.c
src/testUtility/: Makefile-Mac  README-Mac.txt  Test_Utility.c
tools/: 90-cyusb.rules  CMakeLists.txt  Makefile  Makefile-Linux  Makefile-Mac  README-Linux.txt  README-Mac.txt  README.txt  Test_Utility.c  cyusbserialtest.c
windows/: gettimeofday.c  usleep.c
windows/include/sys/: time.h
