cmake_minimum_required(VERSION 2.8)

################################################################################
# Install libbladeRF header files
################################################################################
install(FILES
        CyUSBSerial.h
        DESTINATION include
       )
